# iosproductivityapp

./: .env.example  .gitignore  CODEDNA.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  iOSProductivity_User_Guide.docx  pyproject.toml  requirements.txt
.codedna/: dna.json
.codedna/checkpoints/: document_architecture.json  document_readme.json  implement_calendar_view_android.json  implement_calendar_view_ios.json  implement_dashboard_view_android.json  implement_dashboard_view_ios.json  implement_database_migrations.json  implement_fastapi_routes.json  implement_focus_mode_view_android.json  implement_focus_mode_view_ios.json  implement_productivity_stats_view_android.json  implement_productivity_stats_view_ios.json  implement_task_editor_view_android.json  implement_task_editor_view_ios.json  implement_task_list_view_android.json  implement_task_list_view_ios.json  scaffold_android_app_entry_point.json  scaffold_android_main_activity.json  scaffold_application_use_cases.json  scaffold_dockerfile.json  scaffold_domain_models.json  scaffold_flyio_config.json  scaffold_infrastructure_database_config.json  scaffold_infrastructure_fastapi_app.json  scaffold_infrastructure_repositories.json  scaffold_ios_app_delegate.json  scaffold_ios_app_entry_point.json  scaffold_presentation_android_design_system.json  (+9 more)
docs/: API.md  CHANGELOG.md  DECISIONS.md  MODULES.md  architecture.md
iOSProductivity/: Info.plist  LaunchScreen.storyboard  SceneDelegate.swift  iOSProductivityApp.swift
src/: main.py
tests/: conftest.py  test_health.py
(+106 files in other folders)
